# BottleSaml

./: .gitignore  BottleSaml  README.md  config_sample.py  setup.cfg
docs/: LOGINHOOKS.md  READMEAUTH.md  READMESP.md  SAMLSPCLASS.md
src/BottleSaml/: SamlAuth.py  SamlSP.py  __init__.py  reqID.py
