[metadata]
name=BottleSaml
version=21.09.21
author = gunville
author_email = rk13088@yahoo.com
description = SAML Service Provider for Bottle
long_description = file: README.md
long_description_content_type = text/markdown
license_files = License.txt
url = https://github.com/Glocktober/BottleSaml
project_urls =
    repo = https://github.com/Glocktober/BottleSaml
    overview = https://github.com/Glocktober/BottleSaml/blob/main/README.md
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Bottle
keywords='bottle saml plugin'
[options]
package_dir = 
    = src
packages = find:
install_requires =
    bottle>=0.12.0
    BottleSessions>=21.07.01
    BottleAuth>=21.09.01
    minisaml>=20.11b0
python_requires = >=3.6

[options.packages.find]
where = src

